Host URL and Cookies Missing in Prod/Test Bug (#18)
* Added small test population script for travis temp database.

* Added small population script.

* Setup test to make sure valid credential set works.

* Updated test to see if travis is adding data to table correctly.

* Manual debugging of mebers table.

* Incorrect syntax on travis sql debug

* Updated with correct -c command.

* Updated travis file to get rid of extra psql debug statment.  Modified PGURL for travis environment variable.

* Adding pgurl as environment variable.

* Added env data back in case had to stitch together postgres url.  Trying new export method on travis.

* Updated readme with new test commands.

* Updated localhost URL.

* Added CORS middleware for server.  Added Logic to output and log more verbose login failures.

* Cookies are now HTTP Only and stored in browser.
Added:
- domain and httpOnly configs in session cookie
- The *required* and well defined allowed origins
- Allow Credentials in cors settings
- wrap handler midddleware with clearhandler so that memory leak doesn't occur.
Cookies are cool

* Updated to use standard go testing file structure.

* Moved tests to standard Golang style file structure.

* Renamed to reflect the true nature of the go file.

* Updated comment.

* Testing with negroni middleware helper and the CSRF token.

* CSRF token works if I manually insert it into fetch header.  But now the cookie isn't returned.

* Working with csrf token.  Now need to set the token in the app.

* Added starter handle to generate just the CSRF token.  Cookie will be generated as well but both must be given to the app.

* Updated test message.

* Modified CSRF cookie name.  Modified CSRF route output.

* Removed unused fmt package.

* renamed gatekeeper package to avoid confusion with the gatekeepr app directory.

* Preparing to make member specific functions for reusablity.

* Replaced with singular secret key.



--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,12 @@ jobs:
   include:
   - stage: deploy to heroku for dev test
     if: branch = dev
+    script: go install
     deploy:
       go: '1.9'
-      install: skip
       services: skip
       addons: skip
       before_script: skip
-      script: skip
       provider: heroku
       on: dev
       app:
